--- a/index.html
+++ b/index.html
@@ -1440,8 +1440,7 @@
     </br></br></br>
 
     <h3>Files:</h3>
-    <p>The hyperparams and results for rq2 is available here: <a href="https://drive.google.com/open?id=1eitT9BpOcV8daqbm9EYmwcARKNdcRlQG">https://drive.google.com/open?id=1eitT9BpOcV8daqbm9EYmwcARKNdcRlQG</a></p>
-    <p>The dataset is available here: <a href="https://drive.google.com/open?id=1ISYmXE5U9PPNb2eRKo4g6--7AraQrBtJ">https://drive.google.com/open?id=1ISYmXE5U9PPNb2eRKo4g6--7AraQrBtJ</a></p>
+    <p>The dataset is available <a href="data.zip">here</a></p>
   </div>
 
   <!-- Footer -->
