--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
     </br></br></br>
 
     <h3>Files:</h3>
-    <p>The dataset is available <a href="data.zip">here</a></p>
+    <p>The dataset is available <a href="https://drive.google.com/file/d/1IMAr6TjBtS80C561jtJ1FiXUbN7bW-pF/view?usp=sharing">here</a></p>
   </div>
 
   <!-- Footer -->
