adding smells validation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="#">Understanding and Classifying Code Harmfulness</a>
+      <a href="smells-validation.html">Smells Validated</a>
     </div>
   </nav>
   <div class="container">
